--- a/apache/000-default.conf
+++ b/apache/000-default.conf
@@ -1,7 +1,8 @@
 # 8000番ポートで待ち受ける
 Listen 8000
 <VirtualHost *:8000>
-    ServerName wordpress.example.com
+    # ServerName wordpress.example.com
+    ServerName localhost
     DocumentRoot /var/www/html
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
