--- a/compose.yml
+++ b/compose.yml
@@ -7,8 +7,8 @@ services:
       - '443:443'
     environment:
       STAGE: 'local' # Don't use production until staging
-      # DOMAINS: 'wordpress.example.com -> http://wordpress:8000'
-      DOMAINS: 'localhost -> http://wordpress:8000'
+      DOMAINS: 'wordpress.example.com -> http://wordpress:8000,
+                nginx.example.com -> http://nginx:9000'
     volumes:
       - ./data/ssl_certs:/var/lib/https-portal
   
@@ -23,6 +23,7 @@ services:
       MYSQL_USER: wordpress
       MYSQL_PASSWORD: wordpress
     
+  # wordpressサービス
   wordpress:
     depends_on:
       - db
@@ -39,5 +40,14 @@ services:
       - ./wordpress:/var/www/html
       - ./apache/000-default.conf:/etc/apache2/sites-available/000-default.conf
 
+  # Webサービス
+  nginx:
+    image: nginx:1.17.6
+    ports:
+    - "9000:9000"
+    volumes:
+    - ./web/:/var/www/html
+    - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    
 volumes:
     db_data:
